[package]
name = "interlace"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
egui = "0.35"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# egui is an immediate-mode GUI: it re-lays out and re-paints the *entire* window
# every frame. Unoptimized, that layout/paint/text-shaping work makes scrolling
# visibly stutter. Optimizing dependencies (but not our own crate) gives near-
# release rendering speed under `cargo run` while keeping our code fast to
# recompile and debuggable.
[profile.dev.package."*"]
opt-level = 3
